Integração com um sistema de config via properties e persistencia de dados gerando arquivos logs